fixing an issue with the spacing of the text

--- a/PortfolioStyle.css
+++ b/PortfolioStyle.css
@@ -1,8 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  gap: 0;
-}
+
 
 .logo{
   margin-left: 2%;
